RGFW/RGFW.h

		typedef unsigned char 	u8;
		typedef signed char		i8;
		typedef unsigned short  u16;
		typedef unsigned int 	u32;
		typedef signed int		i32;
		typedef unsigned long	u64;
		typedef uint8_t     u8;
		typedef int8_t      i8;
		typedef uint16_t   u16;
		typedef uint32_t   u32;
		typedef int32_t    i32;
		typedef uint64_t   u64;
	typedef u8 b8;
	typedef struct { u32 w, h; } RGFW_area;
	typedef struct RGFW_window {
		RGFW_window_src src;
#if defined(RGFW_OSMESA) || defined(RGFW_BUFFER) 
		u8* buffer; 
#endif
		RGFW_Event event; 
		RGFW_rect r; 
		u32 fpsCap; 
	} RGFW_window; 
	typedef u64 RGFW_thread; 
	typedef void* RGFW_thread; 
	RGFWDEF b8 RGFW_isMousePressed(RGFW_window* win, u8 button);
	RGFWDEF b8 RGFW_isMouseHeld(RGFW_window* win, u8 button);
	RGFWDEF b8 RGFW_isMouseReleased(RGFW_window* win, u8 button);
	RGFWDEF b8 RGFW_wasMousePressed(RGFW_window* win, u8 button);
	RGFWDEF char* RGFW_readClipboard(size_t* size); 
	RGFWDEF void RGFW_writeClipboard(const char* text, u32 textLen); 
	typedef void* (* RGFW_threadFunc_ptr)(void*);
	typedef DWORD (__stdcall *RGFW_threadFunc_ptr) (LPVOID lpThreadParameter);
	RGFWDEF RGFW_thread RGFW_createThread(RGFW_threadFunc_ptr ptr, void* args); 
	RGFWDEF void RGFW_cancelThread(RGFW_thread thread); 
	RGFWDEF void RGFW_joinThread(RGFW_thread thread); 
	RGFWDEF void RGFW_setThreadPriority(RGFW_thread thread, u8 priority); 
	RGFWDEF u16 RGFW_registerJoystick(RGFW_window* win, i32 jsNumber);
	RGFWDEF u16 RGFW_registerJoystickF(RGFW_window* win, char* file);
	RGFWDEF u32 RGFW_isPressedJS(RGFW_window* win, u16 controller, u8 button);
	RGFWDEF u8* RGFW_getMaxGLVersion(void);
	RGFWDEF void RGFW_setGLStencil(i32 stencil); 
	RGFWDEF void RGFW_setGLSamples(i32 samples); 
	RGFWDEF void RGFW_setGLStereo(i32 stereo); 
	RGFWDEF void RGFW_setGLAuxBuffers(i32 auxBuffers); 
	RGFWDEF void RGFW_setGLVersion(i32 major, i32 minor);
	RGFWDEF void* RGFW_getProcAddress(const char* procname); 
	RGFWDEF void RGFW_window_swapBuffers(RGFW_window* win); 
	RGFWDEF void RGFW_window_swapInterval(RGFW_window* win, i32 swapInterval);
	RGFWDEF void RGFW_window_setGPURender(RGFW_window* win, i8 set);
	RGFWDEF void RGFW_window_checkFPS(RGFW_window* win); 
	RGFWDEF u64 RGFW_getTime(void); 
	RGFWDEF u64 RGFW_getTimeNS(void); 
	RGFWDEF void RGFW_sleep(u64 microsecond); 
	b8 RGFW_isMousePressed(RGFW_window* win, u8 button) {
		assert(win != NULL);
		return RGFW_mouseButtons[button] && (win != NULL) && win->event.inFocus; 
	}
	b8 RGFW_wasMousePressed(RGFW_window* win, u8 button) {
		assert(win != NULL); 
		return RGFW_mouseButtons_prev[button] && (win != NULL) && win->event.inFocus; 
	}
	b8 RGFW_isMouseHeld(RGFW_window* win, u8 button) {
		return (RGFW_isMousePressed(win, button) && RGFW_wasMousePressed(win, button));
	}
	b8 RGFW_isMouseReleased(RGFW_window* win, u8 button) {
		return (!RGFW_isMousePressed(win, button) && RGFW_wasMousePressed(win, button));	
	}
	void RGFW_window_setGPURender(RGFW_window* win, i8 set) {
		if (!set && !(win->src.winArgs & RGFW_NO_GPU_RENDER))
			win->src.winArgs |= RGFW_NO_GPU_RENDER;
		else if (set && win->src.winArgs & RGFW_NO_GPU_RENDER)
			win->src.winArgs ^= RGFW_NO_GPU_RENDER;
	}
	void RGFW_window_checkFPS(RGFW_window* win) {
		u64 deltaTime = RGFW_getTimeNS() - win->event.frameTime;
		u64 fps = round(1e+9 / deltaTime);
		win->event.fps = fps;
		if (win->fpsCap && fps > win->fpsCap) {
			u64 frameTimeNS = 1e+9 / win->fpsCap;
			u64 sleepTimeMS = (frameTimeNS - deltaTime) / 1e6;
			if (sleepTimeMS > 0) {
				RGFW_sleep(sleepTimeMS);
				win->event.frameTime = 0;
			}
		}
		win->event.frameTime = RGFW_getTimeNS();
		if (win->fpsCap == 0)
			return;
		deltaTime = RGFW_getTimeNS() - win->event.frameTime2;
		win->event.fps = round(1e+9 / deltaTime);
		win->event.frameTime2 = RGFW_getTimeNS();
	}
	u32 RGFW_isPressedJS(RGFW_window* win, u16 c, u8 button) { return win->src.jsPressed[c][button]; }
		struct timespec;
	void RGFW_setGLStencil(i32 stencil) { RGFW_STENCIL = stencil; }
	void RGFW_setGLSamples(i32 samples) { RGFW_SAMPLES = samples; }
	void RGFW_setGLStereo(i32 stereo) { RGFW_STEREO = stereo; }
	void RGFW_setGLAuxBuffers(i32 auxBuffers) { RGFW_AUX_BUFFERS = auxBuffers; }
	void RGFW_setGLVersion(i32 major, i32 minor) {
		RGFW_majorVersion = major;
		RGFW_minorVersion = minor;
	}
	u8* RGFW_getMaxGLVersion(void) {
		RGFW_window* dummy = RGFW_createWindow("dummy", RGFW_RECT(0, 0, 1, 1), 0);
		const char* versionStr = (const char*) glGetString(GL_VERSION);
		static u8 version[2];
		version[0] = versionStr[0] - '0',
			version[1] = versionStr[2] - '0';
		RGFW_window_close(dummy);
		return version;
	}
	void* RGFW_getProcAddress(const char* procname) { 
		#if defined(RGFW_WINDOWS)
			void* proc = (void*) GetProcAddress(wglinstance, procname); 
			if (proc)
				return proc;
		#endif
		return (void*) eglGetProcAddress(procname); 
	}
	void RGFW_window_swapInterval(RGFW_window* win, i32 swapInterval) {
		assert(win != NULL);
		eglSwapInterval(win->src.EGL_display, swapInterval);
		win->fpsCap = (swapInterval == 1) ? 0 : swapInterval;
	}
	void* RGFW_getProcAddress(const char* procname) { return (void*) glXGetProcAddress((GLubyte*) procname); }
	char* RGFW_readClipboard(size_t* size) {
		static Atom UTF8 = 0;
		if (UTF8 == 0)
			UTF8 = XInternAtom(RGFW_root->src.display, "UTF8_STRING", True);
		XEvent event;
		int format;
		unsigned long N, sizeN;
		char* data, * s = NULL;
		Atom target;
		Atom CLIPBOARD = 0, XSEL_DATA = 0;
		if (CLIPBOARD == 0) {
			CLIPBOARD = XInternAtom(RGFW_root->src.display, "CLIPBOARD", 0);
			XSEL_DATA = XInternAtom(RGFW_root->src.display, "XSEL_DATA", 0);
		}
		XConvertSelection(RGFW_root->src.display, CLIPBOARD, UTF8, XSEL_DATA, RGFW_root->src.window, CurrentTime);
		XSync(RGFW_root->src.display, 0);
		XNextEvent(RGFW_root->src.display, &event);
		if (event.type != SelectionNotify || event.xselection.selection != CLIPBOARD || event.xselection.property == 0)
			return NULL;
		XGetWindowProperty(event.xselection.display, event.xselection.requestor,
			event.xselection.property, 0L, (~0L), 0, AnyPropertyType, &target,
			&format, &sizeN, &N, (unsigned char**) &data);
		if (target == UTF8 || target == XA_STRING) {
			s = (char*)RGFW_MALLOC(sizeof(char) * sizeN);
			strncpy(s, data, sizeN);
			s[sizeN] = '\0';
			XFree(data);
		}
		XDeleteProperty(event.xselection.display, event.xselection.requestor, event.xselection.property);
		if (s != NULL && size != NULL)
			*size = sizeN;
		return s;
	}
	void RGFW_writeClipboard(const char* text, u32 textLen) {
		static Atom CLIPBOARD = 0,
			UTF8_STRING = 0,
			SAVE_TARGETS = 0,
			TARGETS = 0,
			MULTIPLE = 0,
			ATOM_PAIR = 0,
			CLIPBOARD_MANAGER = 0;
		if (CLIPBOARD == 0) {
			CLIPBOARD = XInternAtom((Display*) RGFW_root->src.display, "CLIPBOARD", False);
			UTF8_STRING = XInternAtom((Display*) RGFW_root->src.display, "UTF8_STRING", False);
			SAVE_TARGETS = XInternAtom((Display*) RGFW_root->src.display, "SAVE_TARGETS", False);
			TARGETS = XInternAtom((Display*) RGFW_root->src.display, "TARGETS", False);
			MULTIPLE = XInternAtom((Display*) RGFW_root->src.display, "MULTIPLE", False);
			ATOM_PAIR = XInternAtom((Display*) RGFW_root->src.display, "ATOM_PAIR", False);
			CLIPBOARD_MANAGER = XInternAtom((Display*) RGFW_root->src.display, "CLIPBOARD_MANAGER", False);
		}
		XSetSelectionOwner((Display*) RGFW_root->src.display, CLIPBOARD, (Window) RGFW_root->src.window, CurrentTime);
		XConvertSelection((Display*) RGFW_root->src.display, CLIPBOARD_MANAGER, SAVE_TARGETS, None, (Window) RGFW_root->src.window, CurrentTime);
		for (;;) {
			XEvent event;
			XNextEvent((Display*) RGFW_root->src.display, &event);
			if (event.type != SelectionRequest)
				return;
			const XSelectionRequestEvent* request = &event.xselectionrequest;
			XEvent reply = { SelectionNotify };
			char* selectionString = NULL;
			const Atom formats[] = { UTF8_STRING, XA_STRING };
			const i32 formatCount = sizeof(formats) / sizeof(formats[0]);
			selectionString = (char*) text;
			if (request->target == TARGETS) {
				const Atom targets[] = { TARGETS,
										MULTIPLE,
										UTF8_STRING,
										XA_STRING };
				XChangeProperty((Display*) RGFW_root->src.display,
					request->requestor,
					request->property,
					4,
					32,
					PropModeReplace,
					(u8*) targets,
					sizeof(targets) / sizeof(targets[0]));
				reply.xselection.property = request->property;
			}
			if (request->target == MULTIPLE) {
				Atom* targets;
				Atom actualType;
				i32 actualFormat;
				u64 count, bytesAfter;
				XGetWindowProperty((Display*) RGFW_root->src.display, request->requestor, request->property, 0, LONG_MAX, False, ATOM_PAIR, &actualType, &actualFormat, &count, &bytesAfter, (u8**) &targets);
				u64 i;
				for (i = 0; i < count; i += 2) {
					i32 j;
					for (j = 0; j < formatCount; j++) {
						if (targets[i] == formats[j])
							break;
					}
					if (j < formatCount)
					{
						XChangeProperty((Display*) RGFW_root->src.display,
							request->requestor,
							targets[i + 1],
							targets[i],
							8,
							PropModeReplace,
							(u8*) selectionString,
							textLen);
					} else
						targets[i + 1] = None;
				}
				XChangeProperty((Display*) RGFW_root->src.display,
					request->requestor,
					request->property,
					ATOM_PAIR,
					32,
					PropModeReplace,
					(u8*) targets,
					count);
				XFree(targets);
				reply.xselection.property = request->property;
			}
			reply.xselection.display = request->display;
			reply.xselection.requestor = request->requestor;
			reply.xselection.selection = request->selection;
			reply.xselection.target = request->target;
			reply.xselection.time = request->time;
			XSendEvent((Display*) RGFW_root->src.display, request->requestor, False, 0, &reply);
		}
	}
	u16 RGFW_registerJoystick(RGFW_window* win, i32 jsNumber) {
		assert(win != NULL);
#ifdef __linux__
		char file[15];
		sprintf(file, "/dev/input/js%i", jsNumber);
		return RGFW_registerJoystickF(win, file);
#endif
	}
	u16 RGFW_registerJoystickF(RGFW_window* win, char* file) {
		assert(win != NULL);
#ifdef __linux__
		i32 js = open(file, O_RDONLY);
		if (js && win->src.joystickCount < 4) {
			win->src.joystickCount++;
			win->src.joysticks[win->src.joystickCount - 1] = open(file, O_RDONLY);
			u8 i;
			for (i = 0; i < 16; i++)
				win->src.jsPressed[win->src.joystickCount - 1][i] = 0;
		}
		else {
#ifdef RGFW_PRINT_ERRORS
			RGFW_error = 1;
			fprintf(stderr, "Error RGFW_registerJoystickF : Cannot open file %s\n", file);
#endif
		}
		return win->src.joystickCount - 1;
#endif
	}
	void RGFW_window_swapBuffers(RGFW_window* win) {
		assert(win != NULL);
		RGFW_window_makeCurrent(win);
		if (!(win->src.winArgs & RGFW_NO_CPU_RENDER)) {
#if defined(RGFW_OSMESA) || defined(RGFW_BUFFER)
			#ifdef RGFW_OSMESA
			RGFW_OSMesa_reorganize();
			#endif
			RGFW_area area = RGFW_bufferSize;
#ifndef RGFW_X11_DONT_CONVERT_BGR
			win->src.bitmap->data = (char*) win->buffer;
			u32 x, y;
			for (y = 0; y < (u32)win->r.h; y++) {
				for (x = 0; x < (u32)win->r.w; x++) {
					u32 index = (y * 4 * area.w) + x * 4;
					u8 red = win->src.bitmap->data[index];
					win->src.bitmap->data[index] = win->buffer[index + 2];
					win->src.bitmap->data[index + 2] = red;
				}
			}
#endif	
			XPutImage(win->src.display, (Window) win->src.window, win->src.gc, win->src.bitmap, 0, 0, 0, 0, RGFW_bufferSize.w, RGFW_bufferSize.h);
#endif
		}
		if (!(win->src.winArgs & RGFW_NO_GPU_RENDER)) {
			#ifdef RGFW_EGL
					eglSwapBuffers(win->src.EGL_display, win->src.EGL_surface);
			#elif defined(RGFW_OPENGL)
					glXSwapBuffers((Display*) win->src.display, (Window) win->src.window);
			#endif
		}
		RGFW_window_checkFPS(win);
	}
	void RGFW_window_swapInterval(RGFW_window* win, i32 swapInterval) {
		assert(win != NULL);
		#if defined(RGFW_OPENGL)	
		((PFNGLXSWAPINTERVALEXTPROC) glXGetProcAddress((GLubyte*) "glXSwapIntervalEXT"))((Display*) win->src.display, (Window) win->src.window, swapInterval);
		#endif
		win->fpsCap = (swapInterval == 1) ? 0 : swapInterval;
	}
	u64 	RGFW_getTimeNS(void) { 
		struct timespec ts = { 0 };
		clock_gettime(1, &ts);
		unsigned long long int nanoSeconds = (unsigned long long int)ts.tv_sec*1000000000LLU + (unsigned long long int)ts.tv_nsec;
		return nanoSeconds;
	}
	u64 RGFW_getTime(void) {
		struct timespec ts = { 0 };
		clock_gettime(1, &ts);
		unsigned long long int nanoSeconds = (unsigned long long int)ts.tv_sec*1000000000LLU + (unsigned long long int)ts.tv_nsec;
		return (double)(nanoSeconds) * 1e-9;
	}
	void* RGFW_getProcAddress(const char* procname) { 
		void* proc = (void*) wglGetProcAddress(procname);
		if (proc)
			return proc;
		return (void*) GetProcAddress(wglinstance, procname); 
	}
	char* RGFW_readClipboard(size_t* size) {
		if (OpenClipboard(NULL) == 0)
			return (char*) "";
		HANDLE hData = GetClipboardData(CF_UNICODETEXT);
		if (hData == NULL) {
			CloseClipboard();
			return (char*) "";
		}
		wchar_t* wstr = (wchar_t*) GlobalLock(hData);
		char* text;
		{
			setlocale(LC_ALL, "en_US.UTF-8");
			size_t textLen = wcstombs(NULL, wstr, 0);
			if (textLen == 0)
				return (char*) "";
			text = (char*) RGFW_MALLOC((textLen * sizeof(char)) + 1);
			wcstombs(text, wstr, (textLen) +1);
			if (size != NULL)
				*size = textLen + 1;
			text[textLen] = '\0';
		}
		GlobalUnlock(hData);
		CloseClipboard();
		return text;
	}
	void RGFW_writeClipboard(const char* text, u32 textLen) {
		HANDLE object;
		WCHAR* buffer;
		object = GlobalAlloc(GMEM_MOVEABLE, (1 + textLen) * sizeof(WCHAR));
		if (!object)
			return;
		buffer = (WCHAR*) GlobalLock(object);
		if (!buffer) {
			GlobalFree(object);
			return;
		}
		MultiByteToWideChar(CP_UTF8, 0, text, -1, buffer, textLen);
		GlobalUnlock(object);
		if (!OpenClipboard(RGFW_root->src.window)) {
			GlobalFree(object);
			return;
		}
		EmptyClipboard();
		SetClipboardData(CF_UNICODETEXT, object);
		CloseClipboard();
	}
	u16 RGFW_registerJoystick(RGFW_window* win, i32 jsNumber) {
		assert(win != NULL);
		RGFW_UNUSED(jsNumber)
		return RGFW_registerJoystickF(win, (char*) "");
	}
	u16 RGFW_registerJoystickF(RGFW_window* win, char* file) {
		assert(win != NULL);
		RGFW_UNUSED(file)
		return win->src.joystickCount - 1;
	}
	void RGFW_window_swapInterval(RGFW_window* win, i32 swapInterval) {
		assert(win != NULL);
		#if defined(RGFW_OPENGL)
		typedef BOOL(APIENTRY* PFNWGLSWAPINTERVALEXTPROC)(int interval);
		static PFNWGLSWAPINTERVALEXTPROC wglSwapIntervalEXT = NULL;
		static void* loadSwapFunc = (void*) 1;
		if (loadSwapFunc == NULL) {
			fprintf(stderr, "wglSwapIntervalEXT not supported\n");
			win->fpsCap = (swapInterval == 1) ? 0 : swapInterval;
			return;
		}
		if (wglSwapIntervalEXT == NULL) {
			loadSwapFunc = (void*) wglGetProcAddress("wglSwapIntervalEXT");
			wglSwapIntervalEXT = (PFNWGLSWAPINTERVALEXTPROC) loadSwapFunc;
		}
		if (wglSwapIntervalEXT(swapInterval) == FALSE)
			fprintf(stderr, "Failed to set swap interval\n");
		#endif
		win->fpsCap = (swapInterval == 1) ? 0 : swapInterval;
	}
	void RGFW_window_swapBuffers(RGFW_window* win) {
		assert(win != NULL);
		RGFW_window_makeCurrent(win);
		if (!(win->src.winArgs & RGFW_NO_CPU_RENDER)) {
#if defined(RGFW_OSMESA) || defined(RGFW_BUFFER)
			#ifdef RGFW_OSMESA
			RGFW_OSMesa_reorganize();
			#endif
			HGDIOBJ oldbmp = SelectObject(win->src.hdcMem, win->src.bitmap);
			BitBlt(win->src.hdc, 0, 0, win->r.w, win->r.h, win->src.hdcMem, 0, 0, SRCCOPY);
			SelectObject(win->src.hdcMem, oldbmp);
#endif
		}
		if (!(win->src.winArgs & RGFW_NO_GPU_RENDER)) {
			#ifdef RGFW_EGL
					eglSwapBuffers(win->src.EGL_display, win->src.EGL_surface);
			#elif defined(RGFW_OPENGL)
					SwapBuffers(win->src.hdc);
			#endif
			#if defined(RGFW_WINDOWS) && defined(RGFW_DIRECTX)
					win->src.swapchain->lpVtbl->Present(win->src.swapchain, 0, 0);
			#endif
		}
		RGFW_window_checkFPS(win);
	}
	u64 RGFW_getTimeNS(void) {
		LARGE_INTEGER frequency;
		QueryPerformanceFrequency(&frequency);
		LARGE_INTEGER counter;
		QueryPerformanceCounter(&counter);
		return (u64) (counter.QuadPart * 1e9 / frequency.QuadPart);
	}
	u64 RGFW_getTime(void) {
		LARGE_INTEGER frequency;
		QueryPerformanceFrequency(&frequency);
		LARGE_INTEGER counter;
		QueryPerformanceCounter(&counter);
		return (u64) (counter.QuadPart / (double) frequency.QuadPart);
	}
	void RGFW_sleep(u64 ms) {
		Sleep(ms);
	}
	RGFW_thread RGFW_createThread(RGFW_threadFunc_ptr ptr, void* args) { return CreateThread(NULL, 0, ptr, args, 0, NULL); }
	void RGFW_cancelThread(RGFW_thread thread) { CloseHandle((HANDLE) thread); }
	void RGFW_joinThread(RGFW_thread thread) { WaitForSingleObject((HANDLE) thread, INFINITE); }
	void RGFW_setThreadPriority(RGFW_thread thread, u8 priority) { SetThreadPriority((HANDLE) thread, priority); }
	typedef CGRect NSRect;
	typedef void NSBitmapImageRep;
	typedef void NSImage;
	typedef const char* NSPasteboardType;
	typedef const char* NSPasteboardType;
	void* RGFW_getProcAddress(const char* procname) {
		if (RGFWnsglFramework == NULL)
			RGFWnsglFramework = CFBundleGetBundleWithIdentifier(CFSTR("com.apple.opengl"));
		CFStringRef symbolName = CFStringCreateWithCString(kCFAllocatorDefault, procname, kCFStringEncodingASCII);
		void* symbol = CFBundleGetFunctionPointerForName(RGFWnsglFramework, symbolName);
		CFRelease(symbolName);
		return symbol;
	}
	char* RGFW_readClipboard(size_t* size) {
		char* clip = (char*)NSPasteboard_stringForType(NSPasteboard_generalPasteboard(), NSPasteboardTypeString);
		size_t clip_len = 1;
		if (clip != NULL) {
			clip_len = strlen(clip) + 1; 
		}
		char* str = (char*)RGFW_MALLOC(sizeof(char) * clip_len);
		if (clip != NULL) {
			strncpy(str, clip, clip_len);
		}
		str[clip_len] = '\0';
		if (size != NULL)
			*size = clip_len;
		return str;
	}
	void RGFW_writeClipboard(const char* text, u32 textLen) {
		RGFW_UNUSED(textLen);
		NSPasteboardType array[] = { NSPasteboardTypeString, NULL };
		NSPasteBoard_declareTypes(NSPasteboard_generalPasteboard(), array, 1, NULL);
		NSPasteBoard_setString(NSPasteboard_generalPasteboard(), text, NSPasteboardTypeString);
	}
	u16 RGFW_registerJoystick(RGFW_window* win, i32 jsNumber) {
		RGFW_UNUSED(jsNumber);
		assert(win != NULL);
		return RGFW_registerJoystickF(win, (char*) "");
	}
	u16 RGFW_registerJoystickF(RGFW_window* win, char* file) {
		RGFW_UNUSED(file);
		assert(win != NULL);
		return win->src.joystickCount - 1;
	}
	void RGFW_window_swapInterval(RGFW_window* win, i32 swapInterval) {
		assert(win != NULL);
		#if defined(RGFW_OPENGL)
		NSOpenGLContext_setValues(win->src.rSurf, &swapInterval, 222);
		#endif
		win->fpsCap = (swapInterval == 1) ? 0 : swapInterval;
	}
	void RGFW_window_swapBuffers(RGFW_window* win) {
		assert(win != NULL);
		RGFW_window_makeCurrent(win);
		if (!(win->src.winArgs & RGFW_NO_CPU_RENDER)) {
#if defined(RGFW_OSMESA) || defined(RGFW_BUFFER)
			#ifdef RGFW_OSMESA
			RGFW_OSMesa_reorganize();
			#endif
			RGFW_area area = RGFW_bufferSize;
			void* view = NSWindow_contentView(win->src.window);
			void* layer = objc_msgSend_id(view, sel_registerName("layer"));
			((void(*)(id, SEL, NSRect))objc_msgSend)(layer,
				sel_registerName("setFrame:"),
				(NSRect){{0, 0}, {win->r.w, win->r.h}});
			NSBitmapImageRep* rep = NSBitmapImageRep_initWithBitmapData(
				&win->buffer, win->r.w, win->r.h, 8, 4, true, false,
				"NSDeviceRGBColorSpace", 0,
				area.w * 4, 32
			);
			id image = NSAlloc((id)objc_getClass("NSImage"));
			NSImage_addRepresentation(image, rep);
			objc_msgSend_void_id(layer, sel_registerName("setContents:"), (id) image);
			release(image);
			release(rep);
#endif
		}
		if (!(win->src.winArgs & RGFW_NO_GPU_RENDER)) {
			#ifdef RGFW_EGL
					eglSwapBuffers(win->src.EGL_display, win->src.EGL_surface);
			#elif defined(RGFW_OPENGL)
					objc_msgSend_void(win->src.rSurf, sel_registerName("flushBuffer"));
			#endif
		}
		RGFW_window_checkFPS(win);
	}
	u64 RGFW_getTimeNS(void) {
		static mach_timebase_info_data_t timebase_info;
		if (timebase_info.denom == 0) {
			mach_timebase_info(&timebase_info);
		}
		return mach_absolute_time() * timebase_info.numer / timebase_info.denom;
	}
	u64 RGFW_getTime(void) {
		static mach_timebase_info_data_t timebase_info;
		if (timebase_info.denom == 0) {
			mach_timebase_info(&timebase_info);
		}
		return (double) mach_absolute_time() * (double) timebase_info.numer / ((double) timebase_info.denom * 1e9);
	}
	RGFW_thread RGFW_createThread(RGFW_threadFunc_ptr ptr, void* args) {
		RGFW_UNUSED(args);
		RGFW_thread t;
		pthread_create((pthread_t*) &t, NULL, *ptr, NULL);
		return t;
	}
	void RGFW_cancelThread(RGFW_thread thread) { pthread_cancel((pthread_t) thread); }
	void RGFW_joinThread(RGFW_thread thread) { pthread_join((pthread_t) thread, NULL); }
	void RGFW_setThreadPriority(RGFW_thread thread, u8 priority) { pthread_setschedprio(thread, priority); }
	void RGFW_sleep(u64 ms) {
		struct timespec time;
		time.tv_sec = 0;
		time.tv_nsec = ms * 1e+6;
		nanosleep(&time, NULL);
	}