RGFW/RGFW.odin

    
    @(link_name="RGFW_isReleasedI")
    isReleasedI :: proc(win: ^window, key: u32) -> bool ---
    
    @(link_name="RGFW_isMousePressed")
    isMousePressed :: proc(win: ^window, button: u8) -> bool ---
    
    @(link_name="RGFW_isMouseHeld")
    isMouseHeld :: proc(win: ^window, button: u8) -> bool ---
    
    @(link_name="RGFW_isMouseReleased")
    isMouseReleased :: proc(win: ^window, button: u8) -> bool ---
    
    @(link_name="RGFW_wasMousePressed")
    wasMousePressed :: proc(win: ^window, button: u8) -> bool ---
    
    @(link_name="RGFW_keyCodeTokeyStr")
    keyCodeTokeyStr :: proc(key: u64) -> cstring ---
    
    @(link_name="RGFW_keyStrToKeyCode")
    keyStrToKeyCode :: proc(key: cstring) -> u32 ---
    
    @(link_name="RGFW_isPressedS")
    isPressedS :: proc(win: ^window, key: cstring) -> bool ---
    
    @(link_name="RGFW_readClipboard")
    readClipboard :: proc(size: ^u32) -> cstring ---
    
    @(link_name="RGFW_writeClipboard")
    writeClipboard :: proc(text: cstring, textLen: u32) ---
    
    @(link_name="RGFW_keystrToChar")
    keystrToChar :: proc(key: cstring) -> i8 ---
    
    //@(link_name="RGFW_createThread")
    //createThread :: proc(ptr: threadFunc_ptr, args: rawptr) -> thread ---
    
    @(link_name="RGFW_cancelThread")
    cancelThread :: proc(t: thread) ---
    
    @(link_name="RGFW_joinThread")
    joinThread :: proc(t: thread) ---
    
    @(link_name="RGFW_setThreadPriority")
    setThreadPriority :: proc(t: thread, priority: u8) ---
    
    @(link_name="RGFW_registerJoystick")
    registerJoystick :: proc(win: ^window, jsNumber: i32) -> u16 ---
    
    @(link_name="RGFW_registerJoystickF")
    registerJoystickF :: proc(win: ^window, file: cstring) -> u16 ---
    
    @(link_name="RGFW_isPressedJS")
    isPressedJS :: proc(win: ^window, controller: u16, button: u8) -> u32 ---
    
    @(link_name="RGFW_getMaxGLVersion")
    getMaxGLVersion :: proc() -> [^]u8 ---
    
    @(link_name="RGFW_setGLStencil")
    setGLStencil :: proc(stencil: int) ---
    
    @(link_name="RGFW_setGLSamples")
    setGLSamples :: proc(samples: int) ---
    
    @(link_name="RGFW_setGLStereo")
    setGLStereo :: proc(stereo: int) ---
    
    @(link_name="RGFW_setGLAuxBuffers")
    setGLAuxBuffers :: proc(auxBuffers: int) ---
    
    @(link_name="RGFW_setGLVersion")
    setGLVersion :: proc(major: int, minor: int) ---
    
    @(link_name="RGFW_getProcAddress")
    getProcAddress :: proc(procname: cstring) -> rawptr ---
    
    @(link_name="RGFW_window_swapBuffers")
    window_swapBuffers :: proc(win: ^window) ---
    
    @(link_name="RGFW_window_swapInterval")
    window_swapInterval :: proc(win: ^window, swapInterval: int) ---
    
    @(link_name="RGFW_window_setGPURender")
    window_setGPURender :: proc(win: ^window, set: int) ---
    
    @(link_name="RGFW_window_checkFPS")
    window_checkFPS :: proc(win: ^window) ---
    
    @(link_name="RGFW_getTime")
    getTime :: proc() -> u64 ---
    
    @(link_name="RGFW_getTimeNS")
    getTimeNS :: proc() -> u64 ---
    
    @(link_name="RGFW_sleep")
    sleep :: proc(microseconds: u64) ---
}

/* sourced from https://github.com/odin-lang/Odin/blob/master/vendor/glfw/wrapper.odin */
gl_set_proc_address :: proc(p: rawptr, name: cstring) {
	(^rawptr)(p)^ = getProcAddress(name)
}